@@ -36,6 +36,7 @@ Improve the "Edit panel" tab so that Panels Everywhere can use a different name 
 #731950: Prevent warning if task has invalid subtasks callback.
 #831592: Context: Taxonomy vocabulary would not save vocabulary value.
 #836828 by jmiccolis: ctools_include() would try to include again even though it was trying to statically cache a list of files already included.
+#843042: export-ui delete button did not work.
 
 ctools 6.x-1.6 (2010-Jun-1)
 ==============
